overflow wrapper issue fix

--- a/src/components/Wrapper/Wrapper.module.scss
+++ b/src/components/Wrapper/Wrapper.module.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   color: #0c1713;
   z-index: 1;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 
   h1 {
